<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:id="@+id/Container"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical" > 

    <!-- Row 1 with single column --> 

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff4500"
        android:gravity="center_horizontal" >

        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:enabled="false"
            android:height="25dp"
            android:paddingTop="4dp"
            android:text="@string/air_duct_sizing_calculator"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/metric_units"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold" />
    </TableRow>

    <!-- 1. Select duct type -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8b4513"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >
       
        <TextView
            android:id="@+id/TextView04"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".55"
            android:gravity="left"
            android:text="@string/_1_select_duct_type"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/ductTypeSpinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/customspinner"
            android:entries="@array/ductType_arrays"
            android:paddingLeft="10dp"
            android:prompt="@string/duct_prompt" />

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="0dp"
            android:layout_weight=".1"
            android:gravity="left"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </TableRow>

    <!-- 2. Enter Friction Rate -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/pascals"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </TableRow>

    <!-- Row 2 with 3 columns -->

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/_2_enter_friction_rate"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editFriction"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:background="@drawable/round"
            android:hint="@string/_15"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:textColor="#ffffff" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/use_this_rate_to_size_entire_duct_system"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#302c15"
            android:text="@string/a_friction_rate_of_10_20_pascals_will_produce_a_good_system_for_most_residences_the_lower_the_rate_the_quieter_the_system_"
            android:textColor="#ff4500"
            android:textSize="12sp"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8b4513" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/cubic_meters_sec_"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#8b4513"
        android:paddingBottom="5dp" >

        <TextView
            android:id="@+id/TextView5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/_3_enter_air_volume"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editCFM"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:background="@drawable/round"
            android:hint="@string/_50"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp"
            android:textColor="#ffffff" >

            <requestFocus />
        </EditText>
      

        <TextView
            android:id="@+id/TextView6"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/meters_sec"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowVelocity"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:id="@+id/TextViewVelocity1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="left"
            android:height="35dp"
            android:text="@string/velocity_of_air"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/editVelocity"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:background="@drawable/outputfields"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/TextViewVelocity2"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#333300" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#302c15"
            android:text="@string/if_the_velocity_is_greater_than_3_5_m_s_for_flex_duct_or_4_5_m_s_for_metal_duct_then_enlarge_the_duct_by_one_size_all_return_duct_should_be_limited_to_3_5_m_s_fpm"
            android:textColor="#ff4500"
            android:textSize="12sp"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#8b4513" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="3"
            android:text="@string/mm"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRowDuctSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8b4513"
        android:paddingBottom="5dp" >

        <TextView
            android:id="@+id/TextViewDuctSize"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/round_duct_size"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textDuctSize"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:background="@drawable/outputfields"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/TextDuctSizeBlank"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#333300" >

        <TextView
            android:layout_width="wrap_content"
            android:background="#302c15"
            android:text="@string/convert_round_to_square_or_rectangle"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="italic" />

    </TableRow>

    <TableRow
        android:id="@+id/squareRound"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:id="@+id/viewSquareRound"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:background="#302c15"
            android:gravity="left"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/viewSquareRoundWidth"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:text="@string/height_mm_"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/editFriction2"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:text="@string/width_mm_"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/squareRoundData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#302c15" >

        <TextView
            android:id="@+id/squareRoundDataBlank"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight=".5"
            android:gravity="left"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/squareRoundEdit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight=".5"
            android:background="@drawable/round"
            android:hint="@string/_15"
            android:inputType="numberDecimal"
            android:paddingLeft="10dp" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textWidthDuctSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@drawable/outputfields"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000" />
     
    </TableRow>
       
        
     

</TableLayout>

